--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,3 +1,36 @@
 .lesson {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1.25rem;
+    margin-left: 135px;
+    margin-right: 135px;
+}
+
+.nav {}
+
+.nav__link {
+    margin-left: 50px;
+    text-decoration: none;
+    color: black;
+}
+
+.dactop {
+
+}
+
+.cool {
+    margin-left: 50px;
+    text-decoration: none;
+    color: black;
+    margin-right: 20px;
+}
+
+.button {
+    width: 152px;
+    height: 58px;
+    background-color: #49AD09;
+    border-radius: 5px;
+    border: none;
+    color: white ;
 }
